--- a/zkt-admin/pom.xml
+++ b/zkt-admin/pom.xml
@@ -56,11 +56,11 @@
             <version>5.0.6.RELEASE</version>
         </dependency>
         <!--热启动-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
         <!--swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
