--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<module>zkt-common</module>
 		<module>zkt-admin</module>
         <module>zkt-generator</module>
+        <module>zkt-biology</module>
     </modules>
 	<packaging>pom</packaging>
 
