--- a/zkt-common/zkt-common-core/pom.xml
+++ b/zkt-common/zkt-common-core/pom.xml
@@ -27,5 +27,19 @@
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
+		<dependency>
+		    <groupId>org.apache.mina</groupId>
+		    <artifactId>mina-core</artifactId>
+		    <version>2.0.19</version>
+		</dependency>
+				
     </dependencies>
 </project>
